--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -42,21 +42,22 @@ body,
   padding: var(--sat) var(--sar) var(--sab) var(--sal);
   box-sizing: border-box;
 }
-
-.header {
-  top: var(--sat);
-}
-
-.footer {
-  bottom: var(--sab);
-}
-
 .container {
   width: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
+}
+
+
+/*
+.header {
+  top: var(--sat);
+}
+
+.footer {
+  bottom: var(--sab);
 }
 
 .yscroll {
@@ -78,6 +79,7 @@ body,
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
 }
+*/
 
 #header {
   position: sticky;
