--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -17,8 +17,8 @@ body,
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f9f9f9;
-  text-align:center;
-  overflow:hidden;
+  text-align: center;
+  overflow: hidden;
 }
 
 @media (max-width: 375px) {
@@ -34,6 +34,7 @@ body,
   --sar: env(safe-area-inset-right);
   --sab: env(safe-area-inset-bottom);
   --sal: env(safe-area-inset-left);
+  --header-h: 7.5rem;
 }
 
 .app-root,
@@ -51,36 +52,6 @@ body,
   transform: translate(-50%,-50%);
 }
 
-/*
-.header {
-  top: var(--sat);
-}
-
-.footer {
-  bottom: var(--sab);
-}
-
-.yscroll {
-  width: 100vw;
-  min-height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  touch-action: pan-y;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 4rem 0;
-}
-
-.safe-area {
-  padding-top: env(safe-area-inset-top);
-  padding-bottom: env(safe-area-inset-bottom);
-  padding-left: env(safe-area-inset-left);
-  padding-right: env(safe-area-inset-right);
-}
-*/
-
 #header {
   position: sticky;
   top: var(--sat);
@@ -88,7 +59,7 @@ body,
   display: flex;
   align-items: center;
   width: 100%;
-  height: 7.5rem;
+  height: var(--header-h);
   padding: 0 1.5rem;
   box-sizing: border-box;
   background: #f9f9f9;
@@ -222,12 +193,12 @@ body,
   overscroll-behavior-y: contain;
   padding: 0 1.5rem;
   padding-bottom: calc(1.5rem + 3rem + var(--sab));
-  -ms-overflow-style: none; 
-  scrollbar-width: none;  
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 #main_wrap::-webkit-scrollbar {
-  display: none;  
+  display: none;
 }
 
 #main_wrap::after {
@@ -266,7 +237,7 @@ body,
   transform: none;
   will-change: auto;
   padding: 0;
-  padding-top: calc(7.5rem + var(--sat));
+  padding-top: calc(var(--sat) + var(--header-h));
 }
 
 .routine_total.sum {
