--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -33,6 +33,7 @@ body,
   --sar: env(safe-area-inset-right);
   --sab: env(safe-area-inset-bottom);
   --sal: env(safe-area-inset-left);
+  --app-dvh: 100dvh;     
   --header-h: 7.5rem;
 }
 
