--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -2,8 +2,7 @@
 .routine_total,
 .routine_total .total_area .term button,
 .routine_total .total_area .r_state a,
-.today_tools .tools [class$='on'],
-.today_tools.sum {
+.today_tools .tools [class$='on'] {
   border-radius: 0.5rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
 }
