--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -261,7 +261,8 @@ body,
 .routine_total.sum + .today_tools {
   margin-left:-1.5rem;
   margin-right:-1.5rem;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);}
+  box-shadow: 0 8px 6px -6px rgba(0,0,0,0.2);
+}
 
 button.add {
   width: 3rem;
