--- a/src/assets/css/select.css
+++ b/src/assets/css/select.css
@@ -348,7 +348,7 @@
   background: url('../images/hey_ruffy_temp04.png') no-repeat 0 0/cover;
 }
 
-.routine_card.card_option01 { border:1px solid #e6e6e6!important }
-.routine_card.card_option02 { border:1px solid yellow!important; }
-.routine_card.card_option03 { border:1px solid skyblue!important; }
-.routine_card.card_option04 { border:1px solid orange!important; }
+.routine_card.card_option01 { background-color:#fff1f4!important }
+.routine_card.card_option02 { background-color:#ebfff5!important; }
+.routine_card.card_option03 { background-color:#eaf9ff!important; }
+.routine_card.card_option04 { background-color:#fff7e4!important; }
