--- a/src/assets/css/ar_popup.css
+++ b/src/assets/css/ar_popup.css
@@ -42,7 +42,7 @@
   width:auto; height:auto;
   padding:0 1.5rem;     
   overflow-y:auto;
-  z-index:888;
+  z-index:888!important;
   background:#fafafa; 
 }
 
