--- a/src/assets/css/ar_popup.css
+++ b/src/assets/css/ar_popup.css
@@ -1,5 +1,5 @@
 .popup_wrap,
-.popup_wrap .close_btn_wrap,
+/*.popup_wrap .close_btn_wrap,*/
 .popup_wrap .popup_btm {
   background-color:#fafafa;
 }
