--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -9,7 +9,7 @@ html,
 body,
 #app {
   height: 100%;
-  font-family: 'S-CoreDream-4Regular','Apple SD Gothic Neo',sans-serif;
+  font-family: 'Paperlogy','Apple SD Gothic Neo',sans-serif;
   font-size: 0.9rem;
   line-height: 1.6em;
   color: #333;
