--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -35,10 +35,9 @@ body,
   --sal: env(safe-area-inset-left);
   --app-dvh: 100dvh;     
   --header-h: 7.5rem;
-  /*
-  --header-offset: calc(var(--sat) + var(--header-h)); 
-  */
-}
+  --footer-h: 5rem;
+ }
+
 .app-root,
 .lnb {
   height: calc(100dvh - var(--sat) - var(--sab));
@@ -67,7 +66,7 @@ body,
   background: #f9f9f9;
   padding-left: max(1.5rem, var(--sal));
   padding-right: max(1.5rem, var(--sar));
-  /*transform: translateZ(0);*/
+  transform: translateZ(0);
   transform: none;
   backface-visibility: hidden;
 }
@@ -167,6 +166,8 @@ body,
   padding: 1.5rem;
   z-index: 100;
   background-color: #f9f9f9;
+  height: var(--footer-h);
+  padding-bottom: var(--sab);
 }
 
 #footer .button {
