--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -260,7 +260,7 @@ body,
 }
 
 #main_wrap.scrolled .sticky_head {
-  top: var(--header-h-collapsed);
+ top: calc(var(--header-h-collapsed) + 3rem);
 }
 
 .routine_total.sum {
@@ -276,6 +276,7 @@ body,
   padding-left: 2rem;
   padding-right: 2rem;
   box-shadow: 0 8px 10px -8px rgba(0,0,0,0.2);
+  background-color:#f9f9f9;
 }
 
 button.add {
