--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -353,7 +353,7 @@ button.control {
   left: var(--sal);
   right: var(--sar);
   z-index: 3;
-  background: #f9f9f9
+  background: #f9f9f9;
   margine:0 1.5rem 0 1.5rem
 }
 .pre_spacer { 
