--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -244,7 +244,7 @@ body,
   transform: none;
   will-change: auto;
   padding: 0;
-  padding-top: calc(var(--sat) + var(--header-h));
+  padding-top: calc(var(--sat) + var(--header-h) + 5rem);
 }
 
 #main_wrap.scrolled .main_scroll {
