--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -265,8 +265,8 @@ body,
 }
 
 #main_wrap.scrolled .main_scroll > div:first-of-type {
-  margin-top: 10rem!important;
-  border:1px solid red
+  margin-top: 10rem;
+  margin-bottom:5rem;
 }
 
 .routine_total.sum {
