--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -281,7 +281,7 @@ body,
   margin-right: -2rem;
   padding-left: 2rem;
   padding-right: 2rem;
-  box-shadow: 0 8px 10px -8px rgba(0,0,0,0.2);
+  /*box-shadow: 0 8px 10px -8px rgba(0,0,0,0.2);*/
   background-color:#f9f9f9;
 }
 
