--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -266,6 +266,7 @@ body,
 
 #main_wrap.scrolled .main_scroll > div:first-of-type {
   margin-top: 1.8rem;
+  padding-bottom:20rem;
 }
 
 .routine_total.sum {
