--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -5,7 +5,7 @@
 .today_tools .tools [class$='on'],
 .routine_card {
   border-radius: 0.5rem;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  /*box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);*/
 }
 
 .date_scroll {
