--- a/src/assets/css/select.css
+++ b/src/assets/css/select.css
@@ -349,7 +349,7 @@
 }
 
 .routine_card.card_option01 { 
-  background: url('../images/temp_card_skin01.png') no-repeat 0 0/cover;
+  background: url('../images/temp_card_skin01.png') no-repeat 0 0/100%;
 }
 
 .routine_card.card_option02 { 
