--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,7 +1,14 @@
 @font-face {
   font-family: 'Paperlogy';
-  src: url('../fonts/Paperlogy-8ExtraBold.woff2') format('woff2');
+  src: url('../fonts/Paperlogy-7Bold.woff') format('woff2');
   font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Paperlogy';
+  src: url('../fonts/Paperlogy-4Regular.woff') format('woff2');
+  font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
